test/mutation_analysis/s0263_ugly_number/hafis/o3/mutants/19/result.txt
./test/mutation_analysis/s0263_ugly_number/hafis/o3/mutants/19/Solution.java:22: error: unreachable statement
            while (false) {
                          ^
1 error
